--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .a1{
-            width: 50%;
-            background-color: aqua;
-            height: 200px;
-            display: flex;
-        }
-        .a2{
-            width: 30%;
-            background-color: blueviolet;
-            height: 200px;
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>HTML5 Canvas高空瀑布下落湖面动画DEMO演示</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
+
 <body>
-    <div class="a1">
-        <div class="a2">
-            <div style="margin-top:20px;margin-left: 20px;">
-                个人主页
-            </div>
-            
-        </div>
-    </div>
+  <div id="container"> <canvas id="waterfall"></canvas> <div class="emma flex"> <div>  </div> </div> </div>
+
+<script type="text/javascript" src="js/pixi.min.js"></script>
+<script type="text/javascript" src="js/tinycolor.min.js"></script>
+  
+    <script  src="js/index.js"></script>
+
+<div style="text-align:center;clear:both">
+<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+<script src="/follow.js" type="text/javascript"></script>
+</div>
+
 </body>
 </html>
