--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
 
   
 </head>
@@ -14,8 +14,8 @@
 <body>
   <div id="container"> <canvas id="waterfall"></canvas> <div class="emma flex"> <div>  </div> </div> </div>
 
-<script type="text/javascript" src="js/pixi.min.js"></script>
-<script type="text/javascript" src="js/tinycolor.min.js"></script>
+<script type="text/javascript" src="pixi.min.js"></script>
+<script type="text/javascript" src="tinycolor.min.js"></script>
   
     <script  src="js/index.js"></script>
 
