--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="pixi.min.js"></script>
 <script type="text/javascript" src="tinycolor.min.js"></script>
   
-    <script  src="js/index.js"></script>
+    <script  src="index.js"></script>
 
 <div style="text-align:center;clear:both">
 <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
