--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title></title>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <style>
+   body{
+    margin: 0;
+    padding: 0;
+    font-family: "montserrat";
+    background-image: linear-gradient(125deg,#E4FFCD,#6DD5FA,#2980B9,#E4FFCD); background-size: 400%;
+    animation: bganimation 15s infinite;    
+   }
+   .text{
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 40px 0;
+    font-size: 50px;  
+   }
+   @keyframes bganimation {
+    0%{
+     background-position: 0% 50%;
+    }
+    50%{
+     background-position: 100% 50%;   
+    }   
+    100%{  
+     background-position: 0% 50%;  
+    }
+   }
+        </style>
+    </head>
+    <body>
+  <div >
+   <p class="text">主页</p >
+   
+  </div>
   
-  
-  
-      <link rel="stylesheet" href="style.css">
-
-  
-</head>
-
-<body>
-  <div id="container"> <canvas id="waterfall"></canvas> <div class="emma flex"> <div>  </div> </div> </div>
-
-<script type="text/javascript" src="pixi.min.js"></script>
-<script type="text/javascript" src="tinycolor.min.js"></script>
-  
-    <script  src="index.js"></script>
-
-<div style="text-align:center;clear:both">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
-</div>
-
-</body>
+    </body>
 </html>
