--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    }
    .a1{
     opacity:80%;
-    width: 40%;
+    width: 55%;
     margin-top: 50px;
     height: 750px;
    }
@@ -61,7 +61,7 @@
           <button id="a">enter</button>
         </a>
       </div>
-      <p><img src="cc.jpg" style="width: 85%;margin-top: 75px;margin-left: 90px;"></p>
+      <p><img src="cc.jpg" style="width: 90%;margin-top: 75px;"></p>
     </div>
     </body>
 </html>
