--- a/index1.html
+++ b/index1.html
@@ -48,6 +48,17 @@
         <a href="../实验3/任务B/chap3-demo-2.html" style="margin-left: 25px;">任务2</a>
         <a href="../实验3/任务C/chap3-demo-2.html" style="margin-left: 25px;">任务3</a>
         <p class="a2">实验四</p>
+        <a href="../实验4/任务A/chap4-demo-1.html" style="margin-left: 25px;">任务1</a>
+        <a href="../实验4/任务B/chap4-demo-2.html" style="margin-left: 25px;">任务2</a>
+        <a href="../实验4/任务C/chap4-demo-3.html" style="margin-left: 25px;">任务3</a>
+        <a href="../实验4/任务D/chap4-demo-4.html" style="margin-left: 25px;">任务4</a>
+        <p class="a2">实验五</p>
+        <a href="../实验5/任务A/chap5-demo-1.html" style="margin-left: 25px;">任务1</a>
+        <a href="../实验5/任务B/chap5-demo-2.html" style="margin-left: 25px;">任务2</a>
+        <a href="../实验5/任务C/chap5-demo-3.html" style="margin-left: 25px;">任务3</a>
+        <a href="../实验5/任务D/chap5-demo-4.html" style="margin-left: 25px;">任务4</a>
+        <a href="../实验5/任务E/chap5-demo-5.html" style="margin-left: 25px;">任务5</a>
+        <p class="a2">实验六</p>
       </div>
       <p>实验一</p>
  
