--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
     width: 30%;
     margin: auto;
     margin-top: 10px;
-    height: 700px;
+    height: 900px;
     border-radius: 25px;
     font-family: "Comic Sans MS";
     font-size: 1.3em;
@@ -34,7 +34,7 @@
         </style>
     </head>
     <body>
-    <div style=" background: url('bb.gif');height: 800px; ">
+    <div style=" background: url('bb.gif');height: 1200px; ">
       <div class="a1">
         <p class="a2">实验一</p>
         <a href="../实验1/任务A/chap1-demo-1.html" style="margin-left: 25px;">任务1</a>
@@ -59,6 +59,12 @@
         <a href="../实验5/任务D/chap5-demo-4.html" style="margin-left: 25px;">任务4</a>
         <a href="../实验5/任务E/chap5-demo-5.html" style="margin-left: 25px;">任务5</a>
         <p class="a2">实验六</p>
+        <a href="../实验6/任务A/chap6-demo-1.html" style="margin-left: 25px;">任务1</a>
+        <p class="a2">实验七</p>
+        <a href="../实验7/任务A/chap7-demo-1.html" style="margin-left: 25px;">任务1</a>
+        <p class="a2">实验八</p>
+        <a href="../实验8/任务A/chap8-demo-1.html" style="margin-left: 25px;">任务1</a>
+        <a href="../实验8/任务B/chap8-demo-2.html" style="margin-left: 25px;">任务2</a>
       </div>
       <p>实验一</p>
  
